--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 <body>
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
-            <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"> </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand mr-auto" href="#"> <img src="img/logo.png" height="30" width="41"> </a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span>
@@ -32,10 +35,10 @@
                 </ul>
             </div>
         </div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
     </nav>
+
+
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -46,6 +49,9 @@
                 </div>
                 <div class="col-12 col-sm align-self-center">
                     <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm align-self-center">
+                    <a role="button" class='btn btn-block btn-sm bg-warning mt-1' href="#reservations">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -60,7 +66,8 @@
                 <div class="media">
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="Uthappizza">
                     <div class="media-body">
-                        <h2 class="mt-o">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span> </h2>
+                        <h2 class="mt-o">Uthappizza <span class="badge badge-danger">HOT</span> <span
+                                class="badge badge-pill badge-secondary">$4.99</span> </h2>
                         <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian
                             pizza, topped with Cerignola
                             olives,
@@ -73,13 +80,22 @@
 
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 col-md-3">
-                <h3>This Month's Promotions</h3>
+
+                <h3>This Month's Promotions </h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers,
-                    six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just
-                    $19.99 per person </p>
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five
+                            different salads, six enticing
+                            appetizers,
+                            six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for
+                            just
+                            $19.99 per person </p>
+                    </div>
+                    <img class="d-flex img-thumbnail align-self-center ml-3" src="img/buffet.png" alt="Grand Buffet">
+                </div>
             </div>
         </div>
 
@@ -94,7 +110,8 @@
                     <div class="media-body">
                         <h2 class="mt-0">Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
-                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked
+                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International
+                            experience having worked
                             closely with
                             whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion
                             experiences. </p>
@@ -103,6 +120,69 @@
             </div>
         </div>
     </div>
+
+    <div class="container">
+        <div class="row row-content">
+            <div class="col-12 col-sm-8 offset-sm-2">
+                <div class="card">
+                    <div class="card-header bg-warning">Reserve a Table</div>
+                    <div class="card-body">
+                        <form id="reservations">
+
+
+
+                            <div class="form-group row">
+                                <div class="col-12 col-sm-2">
+                                    <label class="form-check-label" for="reservations">Number of Guests</label>
+                                </div>
+                                <div class="col-12 col-sm-5">
+                                    <div class="form-check form-check-inline">
+
+                                        <input class="form-check-input ml-2" type="radio" id="1" name="radio-option"
+                                            value="1">
+                                        <label class="form-check-label" for="1">1</label>
+                                        <input class="form-check-input ml-2" type="radio" id="2" name="radio-option"
+                                            value="2">
+                                        <label class="form-check-label" for="2">2</label>
+                                        <input class="form-check-input ml-2" type="radio" id="3" name="radio-option"
+                                            value="3">
+                                        <label class="form-check-label" for="3">3</label>
+                                        <input class="form-check-input ml-2" type="radio" id="4" name="radio-option"
+                                            value="4">
+                                        <label class="form-check-label" for="4">4</label>
+                                        <input class="form-check-input ml-2" type="radio" id="5" name="radio-option"
+                                            value="5">
+                                        <label class="form-check-label" for="5">5</label>
+                                        <input class="form-check-input ml-2" type="radio" id="6" name="radio-option"
+                                            value="6">
+                                        <label class="form-check-label" for="6">6</label>
+
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-group row">
+                                <label for="dateandtime" class="col-12 col-md-2  col-form-label">Date and Time</label>
+                                <div class="col-12 col-sm-4">
+                                    <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                                </div>
+                                <div class="col-12 col-sm-4">
+                                    <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12 offset-sm-2">
+                                    <button type="submit" class='btn bg-primary text-white' href="#">Reserve</a>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
     <footer class="footer">
         <div class="container">
