--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
             <div class="col col-sm order-sm-first col-md">
                 <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png"
+                    <img class="d-flex ml-3 img-thumbnail align-self-center" src="img/alberto.png"
                         alt="Alberto Somayya">
                     <div class="media-body">
                         <h2 class="mt-0">Alberto Somayya</h2>
