--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
@@ -33,11 +34,33 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span
                                 class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
+                <span class="navbar-text">
+                    <a data-toggle="modal" data-target="#loginModal">
+                        <span class="fa fa-sign-in"></span>Login</a>
+                    </a>
+                </span>
             </div>
         </div>
     </nav>
 
+<div id="loginModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-lg" role="content">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Login</h4>
+                <button type="button" class="close" data-dismiss="modal">
+                    &times;
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    
+                </form>
 
+            </div>
+        </div>
+    </div>
+</div>
 
     <header class="jumbotron">
         <div class="container">
@@ -51,11 +74,15 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a role="button" class='btn btn-block btn-sm bg-warning mt-1' href="#reservations">Reserve Table</a>
+                    <a role="button" class='btn btn-block btn-sm bg-warning mt-1' data-toggle="tooltip" data-html="true"
+                        title="Or Call Us at <br><strong>+82512345678</strong>" data-placement="bottom"
+                        href="#reservations">Reserve Table</a>
+
                 </div>
             </div>
         </div>
     </header>
+
 
     <div class="container">
         <div class="row row-content align-items-center">
@@ -76,7 +103,6 @@
                 </div>
             </div>
         </div>
-
 
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 col-md-3">
@@ -121,23 +147,22 @@
         </div>
     </div>
 
+    <!--Reservation form-->
     <div class="container">
         <div class="row row-content">
             <div class="col-12 col-sm-8 offset-sm-2">
                 <div class="card">
                     <div class="card-header bg-warning">Reserve a Table</div>
                     <div class="card-body">
+
                         <form id="reservations">
-
-
-
                             <div class="form-group row">
                                 <div class="col-12 col-sm-2">
                                     <label class="form-check-label" for="reservations">Number of Guests</label>
                                 </div>
+
                                 <div class="col-12 col-sm-5">
                                     <div class="form-check form-check-inline">
-
                                         <input class="form-check-input ml-2" type="radio" id="1" name="radio-option"
                                             value="1">
                                         <label class="form-check-label" for="1">1</label>
@@ -156,8 +181,8 @@
                                         <input class="form-check-input ml-2" type="radio" id="6" name="radio-option"
                                             value="6">
                                         <label class="form-check-label" for="6">6</label>
-
                                     </div>
+
                                 </div>
                             </div>
 
@@ -183,7 +208,6 @@
     </div>
 
 
-
     <footer class="footer">
         <div class="container">
             <div class="row">
@@ -196,6 +220,7 @@
                         <li><a href="./contactus.html">Contact</a></li>
                     </ul>
                 </div>
+
                 <div class="col-7 col-sm-5">
                     <h5>Our Address</h5>
                     <address>
@@ -208,6 +233,7 @@
                             href="mailto:confusion@food.net">confusion@food.net</a>
                     </address>
                 </div>
+
                 <div class="col-12 col-sm-4 align-self-center">
                     <div class="text-center">
                         <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i
@@ -222,9 +248,9 @@
                                 class="fa fa-youtube"></i></a>
                         <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o"></i></a>
                     </div>
-
                 </div>
             </div>
+
             <div class="row justify-content-center">
                 <div class="col-auto">
                     <p>© Copyright 2018 Ristorante Con Fusion</p>
@@ -232,10 +258,19 @@
             </div>
         </div>
     </footer>
+
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <!--JQuery function, when the webpage has fully loaded, initiate this function for the tooltip-->
+    <script>
+        $(document).ready(function () {
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
 </body>
 
 </html>
