--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </div>
     </nav>
 
+    <!--Login Modal-->
     <div id="loginModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="content">
             <div class="modal-content">
@@ -54,13 +55,114 @@
                 </div>
                 <div class="modal-body">
                     <form>
-
+                        <div class="form-row">
+                            <div class="form-group col-sm-4">
+                                    <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                                    <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter email">
+                            </div>
+                            <div class="form-group col-sm-4">
+                                <label class="sr-only" for="exampleInputPassword3">Password</label>
+                                <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
+                            </div>
+                            <div class="col-sm-auto">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <label class="form-check-label"> Remember me
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
+                        </div>
                     </form>
-
                 </div>
             </div>
         </div>
     </div>
+
+    <!--Reservations modal-->
+    <div id="reservations" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        
+                        <!--Number of Guests-->
+                        <div class="form-group row">
+                            <div class="col-12 col-sm-2">
+                                <label class="form-check-label" for="reservations">Number of Guests</label>
+                            </div>
+                            <div class="col-12 col-sm-5">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input ml-2" type="radio" id="1" name="radio-option"
+                                        value="1">
+                                    <label class="form-check-label" for="1">1</label>
+                                    <input class="form-check-input ml-2" type="radio" id="2" name="radio-option"
+                                        value="2">
+                                    <label class="form-check-label" for="2">2</label>
+                                    <input class="form-check-input ml-2" type="radio" id="3" name="radio-option"
+                                        value="3">
+                                    <label class="form-check-label" for="3">3</label>
+                                    <input class="form-check-input ml-2" type="radio" id="4" name="radio-option"
+                                        value="4">
+                                    <label class="form-check-label" for="4">4</label>
+                                    <input class="form-check-input ml-2" type="radio" id="5" name="radio-option"
+                                        value="5">
+                                    <label class="form-check-label" for="5">5</label>
+                                    <input class="form-check-input ml-2" type="radio" id="6" name="radio-option"
+                                        value="6">
+                                    <label class="form-check-label" for="6">6</label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!--Restaurant section-->
+                        <div class="row">
+                        <label for="section" class="col-12 col-md-2 col-form-label">Section</label>
+                        <div class="btn-group btn-group-toggle ml-3 mb-4" data-toggle="buttons">
+                            <label class="btn btn-success active">
+                              <input type="radio" name="options" id="non-smoking" autocomplete="off" checked> Non-Smoking
+                            </label>
+                            <label class="btn btn-danger">
+                              <input type="radio" name="options" id="smoking" autocomplete="off"> Smoking
+                            </label>
+                          </div>
+                        </div>
+
+                        <!--Date and Time-->
+                        <div class="form-group row">
+                            <label for="dateandtime" class="col-12 col-md-2  col-form-label">Date and
+                                Time</label>
+                            <div class="col-12 col-sm-4">
+                                <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                            </div>
+                            <div class="col-12 col-sm-4">
+                                <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                            </div>
+                        </div>
+
+                        <!--Buttons-->
+                        <div class="row">
+                            <div class="col-12 offset-sm-2">
+                                <button type="submit" class="btn btn-secondary text-white"
+                                    data-dismiss="modal">Cancel</button>
+                                <button type="submit" class='btn bg-primary text-white' href="#">Reserve</a>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <header class="jumbotron">
         <div class="container">
@@ -74,10 +176,8 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a role="button" class='btn btn-block btn-sm bg-warning mt-1' data-toggle="tooltip" data-html="true"
-                        title="Or Call Us at <br><strong>+82512345678</strong>" data-placement="bottom"
-                        href="#reservations">Reserve Table</a>
-
+                    <a role="button" class='btn btn-block btn-sm bg-warning mt-1' data-toggle="modal"
+                        data-target="#reservations">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -214,68 +314,6 @@
         </div>
     </div>
 
-    <!--Reservation form-->
-    <div class="container">
-        <div class="row row-content">
-            <div class="col-12 col-sm-8 offset-sm-2">
-                <div class="card">
-                    <div class="card-header bg-warning">Reserve a Table</div>
-                    <div class="card-body">
-
-                        <form id="reservations">
-                            <div class="form-group row">
-                                <div class="col-12 col-sm-2">
-                                    <label class="form-check-label" for="reservations">Number of Guests</label>
-                                </div>
-
-                                <div class="col-12 col-sm-5">
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input ml-2" type="radio" id="1" name="radio-option"
-                                            value="1">
-                                        <label class="form-check-label" for="1">1</label>
-                                        <input class="form-check-input ml-2" type="radio" id="2" name="radio-option"
-                                            value="2">
-                                        <label class="form-check-label" for="2">2</label>
-                                        <input class="form-check-input ml-2" type="radio" id="3" name="radio-option"
-                                            value="3">
-                                        <label class="form-check-label" for="3">3</label>
-                                        <input class="form-check-input ml-2" type="radio" id="4" name="radio-option"
-                                            value="4">
-                                        <label class="form-check-label" for="4">4</label>
-                                        <input class="form-check-input ml-2" type="radio" id="5" name="radio-option"
-                                            value="5">
-                                        <label class="form-check-label" for="5">5</label>
-                                        <input class="form-check-input ml-2" type="radio" id="6" name="radio-option"
-                                            value="6">
-                                        <label class="form-check-label" for="6">6</label>
-                                    </div>
-
-                                </div>
-                            </div>
-
-                            <div class="form-group row">
-                                <label for="dateandtime" class="col-12 col-md-2  col-form-label">Date and
-                                    Time</label>
-                                <div class="col-12 col-sm-4">
-                                    <input type="text" class="form-control" id="date" name="date" placeholder="Date">
-                                </div>
-                                <div class="col-12 col-sm-4">
-                                    <input type="text" class="form-control" id="time" name="time" placeholder="Time">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12 offset-sm-2">
-                                    <button type="submit" class='btn bg-primary text-white' href="#">Reserve</a>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
     <footer class="footer">
         <div class="container">
             <div class="row">
@@ -332,13 +370,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
-    <!--JQuery function, when the webpage has fully loaded, initiate this function for the tooltip-->
-    <script>
-        $(document).ready(function () {
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
 </body>
 
 </html>
