--- a/index.html
+++ b/index.html
@@ -34,10 +34,8 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span
                                 class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
-                <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
-                        <span class="fa fa-sign-in"></span>Login</a>
-                    </a>
+                <span class="navbar-text" id="loginButton">
+                        <span class="fa fa-sign-in"></span>Login
                 </span>
             </div>
         </div>
@@ -180,8 +178,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a role="button" class='btn btn-block btn-sm bg-warning mt-1' data-toggle="modal"
-                        data-target="#reservations">Reserve Table</a>
+                    <a role="button" class='btn btn-block btn-sm bg-warning mt-1' id="reservationsButton">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -395,6 +392,17 @@
                 };
             });
         });
+
+        // Login modal
+        $("#loginButton").click(function() {
+            $("#loginModal").modal("show");
+        });
+
+        // Reservations modal
+        $("#reservationsButton").click(function() {
+            $("#reservations").modal("show");
+        });
+        
     </script>
 </body>
 
